--- a/src/Presentation/appsettings.json
+++ b/src/Presentation/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "HotellierContext": ""
+    "HotellierDb": "Server=localhost;Port=5432;Database=HotellierDb;User Id=postgres;Password=postgres;"
   }
 }
